[gd_scene load_steps=37 format=2]

[ext_resource path="res://scripts/player2.gd" type="Script" id=1]
[ext_resource path="res://resouce/ARM/0018.png" type="Texture" id=2]
[ext_resource path="res://resouce/ARM/0001.png" type="Texture" id=3]
[ext_resource path="res://resouce/ARM/0016.png" type="Texture" id=4]
[ext_resource path="res://resouce/ARM/0013.png" type="Texture" id=5]
[ext_resource path="res://sound/shot.mp3" type="AudioStream" id=6]
[ext_resource path="res://resouce/ARM/0005.png" type="Texture" id=7]
[ext_resource path="res://resouce/ARM/0008.png" type="Texture" id=8]
[ext_resource path="res://resouce/ARM/0017.png" type="Texture" id=9]
[ext_resource path="res://resouce/ARM/0020.png" type="Texture" id=10]
[ext_resource path="res://resouce/ARM/0011.png" type="Texture" id=11]
[ext_resource path="res://resouce/ARM/0006.png" type="Texture" id=12]
[ext_resource path="res://resouce/ARM/0004.png" type="Texture" id=13]
[ext_resource path="res://resouce/ARM/0007.png" type="Texture" id=14]
[ext_resource path="res://resouce/ARM/0009.png" type="Texture" id=15]
[ext_resource path="res://resouce/ARM/0002.png" type="Texture" id=16]
[ext_resource path="res://resouce/ARM/0019.png" type="Texture" id=17]
[ext_resource path="res://resouce/ARM/0014.png" type="Texture" id=18]
[ext_resource path="res://resouce/ARM/0012.png" type="Texture" id=19]
[ext_resource path="res://resouce/ARM/0010.png" type="Texture" id=20]
[ext_resource path="res://resouce/ARM/0015.png" type="Texture" id=21]
[ext_resource path="res://resouce/ARM/0003.png" type="Texture" id=22]
[ext_resource path="res://scripts/throw.gd" type="Script" id=54]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 50, 50 )

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="CapsuleMesh" id=5]
material = SubResource( 4 )

[sub_resource type="Gradient" id=6]
colors = PoolColorArray( 0, 0, 0, 1, 0, 0, 0, 1 )

[sub_resource type="GradientTexture" id=7]
gradient = SubResource( 6 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 16 ), ExtResource( 22 ), ExtResource( 13 ), ExtResource( 7 ), ExtResource( 12 ), ExtResource( 14 ), ExtResource( 8 ), ExtResource( 15 ), ExtResource( 20 ), ExtResource( 11 ), ExtResource( 19 ), ExtResource( 5 ), ExtResource( 18 ), ExtResource( 21 ), ExtResource( 4 ), ExtResource( 9 ), ExtResource( 2 ), ExtResource( 17 ), ExtResource( 10 ) ],
"loop": false,
"name": "default",
"speed": 50.0
} ]

[sub_resource type="Gradient" id=8]
offsets = PoolRealArray( 0, 0.0151515, 0.166667, 0.530303 )
colors = PoolColorArray( 0.0106659, 0.910156, 0.172293, 0.619608, 0.439272, 0.684588, 0.483353, 0.605348, 0.6, 0.6, 0.6, 0.6, 0, 0, 0, 0 )

[sub_resource type="GradientTexture2D" id=9]
gradient = SubResource( 8 )

[sub_resource type="CircleShape2D" id=10]
radius = 104.938

[sub_resource type="CircleShape2D" id=11]
radius = 61.7738

[sub_resource type="Animation" id=12]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:modulate:r")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:modulate:g")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath(".:modulate:b")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath(".:modulate:a")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=13]
resource_name = "damaged"
length = 0.5
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:modulate:g")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:modulate:b")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 )
}

[sub_resource type="Animation" id=14]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="player2" type="KinematicBody2D" groups=["player"]]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="sholder" type="MeshInstance2D" parent="."]
position = Vector2( 0, 23.75 )
scale = Vector2( 50, 50 )
mesh = SubResource( 5 )
texture = SubResource( 7 )

[node name="handL" type="AnimatedSprite" parent="."]
position = Vector2( -28, 17 )
rotation = 1.5708
scale = Vector2( 0.5, 0.4 )
frames = SubResource( 3 )
frame = 19
offset = Vector2( 0, 222 )
__meta__ = {
"_edit_bone_": true,
"_edit_ik_": true
}

[node name="Position2D" type="Position2D" parent="handL"]
position = Vector2( -20, 397.5 )

[node name="lcast" type="RayCast2D" parent="handL"]
position = Vector2( 0, 236 )
enabled = true
collision_mask = 128

[node name="handR" type="AnimatedSprite" parent="."]
position = Vector2( 34, 15 )
rotation = -1.5708
scale = Vector2( 0.5, 0.4 )
frames = SubResource( 3 )
offset = Vector2( 0, 222 )
flip_h = true
__meta__ = {
"_edit_bone_": true,
"_edit_ik_": true
}

[node name="Position2D2" type="Position2D" parent="handR"]
position = Vector2( 18, 406 )
rotation = -3.14159

[node name="rcast" type="RayCast2D" parent="handR"]
position = Vector2( 0, 350 )
scale = Vector2( 5, 1 )
enabled = true

[node name="boom" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[node name="Light2D" type="Light2D" parent="."]
enabled = false
texture = SubResource( 9 )
texture_scale = 12.9
color = Color( 0.956863, 0.305882, 0.129412, 1 )
energy = 12.33
mode = 2
shadow_enabled = true

[node name="time" type="Timer" parent="."]
autostart = true

[node name="collect" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="collect"]
shape = SubResource( 10 )

[node name="throwabls" type="Node2D" parent="."]
script = ExtResource( 54 )

[node name="damged" type="Area2D" parent="."]
position = Vector2( 0, 15 )
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="damged"]
shape = SubResource( 11 )

[node name="anim" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 12 )
anims/damaged = SubResource( 13 )
anims/idle = SubResource( 14 )

[connection signal="timeout" from="time" to="." method="_on_time_timeout"]
[connection signal="area_entered" from="damged" to="." method="_on_Area2D_area_entered"]
